chess.css
.chess-board {
  background-color: black;
}

.piece-img {
  max-width: 100%;
  max-height: 100%;
  display:flex;
  width:95%;
  height:95%;
  /*
  min-width:50px;
  min-height:50px;
*/
}

.parent{
  position: relative;
  top: 0px;
  left: 0px;
  border: 1px solid #000000;
}


#topFooter{
  background-color: #2B2929;
}

#topFooter .logo{
  width: 20%;
  height: 20%;
  max-width: 250px;
  max-height: 250px;
}



.flex-container1{
  display:flex;
  position: relative;
  width: 90%;
}

.column {
  flex:1;
}

.left {
  margin: 24px;
  flex-grow: 1;
  position: relative;
}

.right{
    margin: 3vh;
    background-color:rgb(216, 211, 211);
  flex-grow: .5;
}

.row:after{
  content: "";
  display:table;
  clear:both;
}

#game_page{
  background-color:#3b3939;
}

.right{
  border-radius: 5px;
}

.flex-container2 {
  display:flex;

}

.flex-container2 > div {
  border-radius: 5px;
  background-color: white;
  margin: 10px;
  padding:20px;
  flex:1;
  font-family: "Arial";

}


.dropbtn {
  background-color: #3498DB;
  color: white;
  padding: 16px;
  font-size: 16px;
  border: none;
  cursor: pointer;
  align-self: flex-end;
}

.dropbtn:hover, .dropbtn:focus {
  background-color: #2980B9;
}

.dropdown {
  position: relative;
  display: inline-block;
}

.dropdown-content {
  display: none;
  position: absolute;
  background-color: #f1f1f1;
  min-width: 160px;
  overflow: auto;
  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
  z-index: 1;
}

.dropdown-content a {
  color: black;
  padding: 12px 16px;
  text-decoration: none;
  display: block;
}

.dropdown a:hover {
  background-color: #ddd;
}

.show {
  display: block;
}

footer{
  display:flex;
  width:100%;
  height:100px;
  margin-top: 100px;
  background-color: #2B2929;
  color: white;
  justify-content: center;
  align-items:center;
  font-family: Arial, Helvetica, sans-serif;
}

.row{
  display: flex;
  flex-direction: row;
}

.square{
  position: relative;
  justify-content: center;
  align-items: center;
  width:10vh;
  height: 10vh;
}

.black{
  background-color: #3c3c42;

}

.white{
  background-color: #a6a2a2;
}

.pieceholder{
  position: absolute;
  box-sizing: border-box;
  justify-content: center;
  align-items: center;
  width:90%;
  height:90%;
  /*background-color: #fffc41;*/
  left:5%;
  top:5%;

}

.superscript{
  position:absolute;
  box-sizing: border-box;
  width:20%;
  height:20%;

  background-color: yellow;
  right:5%;
  top: 5%;
  z-index:5;

}

.tilenumber{
  position:absolute;
  width:100%;
  height:100%;
  max-width:25px;
  max-height:25px;
  display: flex;
  color:white;
  left: 2%;
  top: 2%;
  font-family: Arial, Helvetica, sans-serif;
  font-size:20px;

}

.tileletter{
  position:absolute;
  width:100%;
  height:100%;
  max-width:25px;
  max-height:25px;
  display: flex;
  color:white;
  right: 2%;
  bottom: 2%;
  font-family: Arial, Helvetica, sans-serif;
  font-size:20px;

}

.legal-move-space-img{

  position: absolute;
  top: 20%;
  left: 20%;
  max-width: 60%;
  max-height: 60%;
  z-index: 3;
}

.menu-image{
  position: relative;
  top:0;
  left: -5vh;
  width: 4vh;
  height: 4vh;
  border: 10px black;
  cursor: pointer;
}

